more restructuring done

--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -36,10 +36,10 @@
         <div class="row">
             <div class="col-1 border-right">
                 <a href="https://www.linkedin.com/in/adegboyega-adeoti-9b4804144/"> 
-                    <img src="linkedin.png" alt="linkedin" class="img-fluid"> 
+                    <img src="static/images/linkedin.png" alt="linkedin" class="img-fluid"> 
                 </a>
                 <a href="https://www.linkedin.com/in/adegboyega-adeoti-9b4804144/"> 
-                    <img src="github.jpg" alt="github" class="img-fluid"> 
+                    <img src="static/images/github.jpg" alt="github" class="img-fluid"> 
                 </a>
             </div>
             <div class="col-11">
@@ -51,15 +51,15 @@
                             <!-- <img src="plot1.png" class="img-fluid" alt=""> -->
                         </div>
                         <div class="col-6">
-                            <img src="plot2.png" class="img-fluid" alt="">
+                            <img src="static/images/plot2.png" class="img-fluid" alt="">
                         </div>
                     </div>
                     <div class="row mt-5">
                         <div class="col-6">
-                            <img src="plot3.png" class="img-fluid" alt="">
+                            <img src="static/images/plot3.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-6">
-                            <img src="plot4.png" class="img-fluid" alt="">
+                            <img src="static/images/plot4.png" class="img-fluid" alt="">
                     </div>
                 </div>
 
@@ -74,7 +74,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     
     <script src="https://cdn.plot.ly/plotly-1.2.0.min.js"></script>
-    <script src="plot1.js"></script>
+    <script src="static/js/plot1.js"></script>
 
 </body>
 </html>
